--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
 
         <div class="my-3 text-end">
-          <button class="btn btn-info text-light">Enviar</button>
+          <button class="btn btn-info text-light bg-secondary">Enviar</button>
         </div>
       </form>
     </section>
