igualando los botones TRABAJOS Y CONTACTO

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             extremas.
           </p>
           <div class="mb-5 pb-5">
-            <button class="btn btn-lg btn-outline-info text-light me-4">
+            <button class="btn btn-lg btn-info text-light bg-secondary me-4">
               Trabajos
             </button>
-            <button class="btn btn-lg btn-info text-light">Contacto</button>
+            <button class="btn btn-lg btn-info text-light bg-secondary">Contacto</button>
           </div>
         </div>
       </div>
