Cambio de colores botones Ver mas

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 cortes jugosos, acompañados de chimichurri y buenos vinos,
                 creando un ambiente de camaradería y alegría.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button type="button" class="btn btn-outline-info bg-secondary">
                 Ver más
               </button>
             </div>
@@ -174,7 +174,7 @@
                 local, sino que también cuentan la historia de las comunidades
                 que han cultivado estas tierras.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button type="button" class="btn btn-outline-info bg-secondary">
                 Ver más
               </button>
             </div>
@@ -195,7 +195,7 @@
                 solo fascina a los biólogos, sino que también sustenta la
                 economía local a través de la pesca sostenible.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button type="button" class="btn btn-outline-info bg-secondary">
                 Ver más
               </button>
             </div>
